--- a/style.css
+++ b/style.css
@@ -1,3 +1,157 @@
-/*this is a comment
-/*this is second comment 
-/*this is third comment
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.main-container{
+    width:100%;
+}
+.flex-container{
+    width:100%;
+    display:flex;
+    background-color: black;
+    height:50px;
+}
+.menu{
+    min-width: 200px;
+    color: white;
+    padding-top: 20px;
+    text-align: centre;
+    font-size: 1em;
+    
+}
+.image-container{
+    display:flex;
+    position: relative;
+    text-align: centre;
+}
+#image-banner{
+    height: 700px;
+    width:100%;
+    opacity:0.8;
+}
+.image-title{
+    position: absolute;
+    top:40%;
+    left:35%;
+    font-size: 5em;
+}
+.image-subtitle{
+    position: absolute;
+    top:55%;
+    left:37%;
+    font-size: 2em;
+}
+.skill-container{
+    display:flex;
+    width:100%;
+    justify-content: center;
+    height: 500px;
+    margin-top: 50px;
+    flex-direction:row;
+    margin-left: auto;
+}
+.skill1{
+    display:flex;
+    width:100px;
+    margin-top: 40px;
+    justify-content: center;
+}
+#image{
+    height:150px;
+    width:150px;
+    margin-right: 50px;
+}
+#skill-text{
+    color:black;
+    margin-top: 30px;
+    text-weight:bold;
+    font-size: 2em;
+    justify-content: center;
+}
+.skill-heading{
+    display:flex;
+    windows:100%;
+    height:100px;
+    color:black;
+    font-size: 2em;
+    margin-bottom: 150px;
+}
+.skill-title{
+    margin-left: 45%;
+    margin-top: 50px;
+    font-size: 2em;
+}
+.portfolio-heading{
+    display:flex;
+    windows:100%;
+    height:100px;
+    color:black;
+    font-size: 2em;
+    margin-bottom: 150px;
+}
+.portfolio-title{
+    margin-left: 45%;
+    margin-top: 50px;
+    font-size: 2em;
+}
+.portfolio-container{
+    display:flex;
+    margin-left:50px;
+    margin-top:100px;
+}
+#portimage{
+    height:300px;
+    width:300px;
+    margin-left: 100px;
+}
+.portfolio-desc{
+    margin-left: 20px;
+}
+.portfolio-name{
+    font-size: 2em;
+    margin-left: 20px;
+}
+.portfolio-info{
+    font-size: 1em;
+    margin-left: 100px;
+    color:gray;
+}
+.hr{
+    width:50%;
+    align-self: center;
+}
+.testimonials{
+    display:flex;
+    width:100%;
+    flex-direction:column;
+}
+.client-name{
+    width:100%;
+    margin-top: 100px;
+    height:20px;
+    font-size: 2em;
+    margin-left: 45%;
+}
+.client-designation{
+    width:100%;
+    height:20px;
+    margin-top: 0.5%;
+    font-size: 1.5em;
+    margin-left: 45%;
+    color:gray;
+}
+.client-testimonials{
+    height:50px;
+    width:100%;
+    font-size: 1.5em;
+    margin-left: 35%;
+    color:gray;
+    font-style: italic;
+}
+
+
+
+
+
+
+
+
